# m4c0-stl

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yaml  no-test-build.yaml
ark/: CMakeLists.txt
ark/tst/: bitstream.cpp  deflate.buffer.cpp  deflate.cpp  deflate.details.cpp  deflate.symbols.cpp  huffman.cpp  zip.cdir.cpp  zip.cpp  zip.dump.cpp  zip.eocd.cpp  zip.local.cpp
assets/: CMakeLists.txt
assets/inc/m4c0/assets/: simple_asset.android.hpp  simple_asset.hpp  simple_asset.others.hpp  stb_image.hpp
assets/src/: simple_asset.android.cpp  simple_asset.apple.cpp  simple_asset.win32.cpp  stb_image.cpp
assets/tst/: test-link.cpp
audio/: CMakeLists.txt
audio/inc/m4c0/: audio.hpp
audio/src/: droid.cpp  osx.cpp  win.cpp
audio/tst/: test-link.cpp
casein/: CMakeLists.txt
casein/src/: main.droid.cpp  main.ios.cpp  main.osx.cpp  main.win.cpp
casein/tst/: dummy.cpp  fuji.cpp
cmake/: install.cmake  library-utils.cmake  m4c0-config.cmake  test-utils.cmake
containers/: CMakeLists.txt
containers/tst/: unique_array.cpp  unique_ptr.cpp  zero_alloc_map.cpp
core/: CMakeLists.txt
core/tst/: CMakeLists.txt  test-callback-chain.cpp  test-ce-list.cpp  test-ce-map.cpp  test-crc32.cpp  test-fifo-worker.cpp  test-function.cpp  test-pimpl.cpp
di/: CMakeLists.txt
di/inc/m4c0/: di.hpp
di/inc/m4c0/di/: instance.hpp  scope.hpp  type_id.hpp  type_map.hpp
di/src/: config.cpp  injector.cpp  type_id.cpp
di/tst/: CMakeLists.txt  test-di-scopes.cpp  test-di.cpp
droid-main/: CMakeLists.txt
droid-main/src/: main.cpp
droid-main/tst/: test-link.cpp
espresso/: CMakeLists.txt
espresso/tst/: constant.cpp  poc.cpp  reader.cpp
ext/: CMakeLists.txt
fuji/: CMakeLists.txt
fuji/src/: depth_buffer.cpp  device_context.cpp  frame_context.cpp  in_flight.cpp  in_flight_list.hpp  main_loop.cpp  swapchain_context.cpp
fuji/tst/: test-poc.cpp
input-map/: CMakeLists.txt
input-map/tst/: dummy.cpp
io/: CMakeLists.txt
io/tst/: test-ce-reader.cpp  test-subreader.cpp
ios-main/: CMakeLists.txt
ios-main/src/: M4C0AppDelegate.m  app_delegate.cpp  main.cpp  main.h  main.m
ios-main/tst/: dummy.cpp
log/: CMakeLists.txt
log/inc/m4c0/: log.hpp
log/src/: android.cpp  apple.cpp  apple.m  windows.cpp
log/tst/: CMakeLists.txt  test-log-link.cpp
maze/: CMakeLists.txt
maze/tst/: dummy.cpp  grid.cpp  model.cpp  view_grid.cpp
native-handles/: CMakeLists.txt
objc-bridge/: CMakeLists.txt
objc-bridge/src/: autorelease.cpp  class_builder.cpp  inject.cpp  middleware.cpp
objc-bridge/tst/: test-autorelease.cpp  test-class-builder.cpp  test-middleware-protos.m  test-middleware.cpp  test-msg-send.cpp  test-poc.cpp  test-swizzling.cpp
objc-wraps/: CMakeLists.txt
objc-wraps/src/: ca_metal_layer.cpp  mtk_view.cpp  ns_application.cpp  ns_application_delegate.cpp  ns_bundle.cpp  ns_menu.cpp  ns_menu_item.cpp  ns_notification_center.cpp  ns_object.cpp  ns_string.cpp  ns_window.cpp
objc-wraps/tst/: test-wrapping.cpp
osx-main/: CMakeLists.txt
osx-main/src/: M4C0AppDelegate.h  M4C0AppDelegate.m  M4C0AppDelegate.mm  M4C0View.h  M4C0View.m  M4C0Window.h  M4C0Window.m  app.hpp  app_delegate.hpp  apple_menu.hpp  key_window.hpp  main.cpp  main.h  main.m  main.mm  metal_view.hpp
osx-main/tst/: CMakeLists.txt  dummy.cpp
parser/: CMakeLists.txt
parser/tst/: brainf.cpp  combiners.cpp  concept.cpp  constants.cpp  conversions.cpp  exceptions.cpp  exoterics.cpp  numeric.cpp  polish.cpp  result.cpp  str.cpp  string_view.cpp  tokeniser.cpp  traits.cpp
png/: CMakeLists.txt
png/tst/: poc.cpp
riff/: CMakeLists.txt
riff/tst/: riff-dump.cpp  test-parser.cpp  test-subreader.cpp  wav-dump.cpp  wav-gen.cpp
test/: CMakeLists.txt
units/: CMakeLists.txt
units/tst/: poc.cpp
vulkan/: CMakeLists.txt
vulkan-actions/: CMakeLists.txt
vulkan-actions/src/: allocate_command_buffers.cpp  (+7 more)
vulkan-commands/: CMakeLists.txt
vulkan-dynamic/: CMakeLists.txt
vulkan-objects/: CMakeLists.txt
vulkan-objects/inc/m4c0/vulkan/: buffer.hpp  command_buffer.hpp  command_buffer_guard.hpp  command_pool.hpp  debug_utils_messenger.hpp  descriptor_pool.hpp  descriptor_set_layout.hpp  device.hpp  device_memory.hpp  extent_2d.hpp  fence.hpp  framebuffer.hpp  handle.hpp  image.hpp  image_view.hpp  instance.hpp  out_of_date_error.hpp  physical_device.hpp  pipeline.hpp  pipeline_layout.hpp  render_pass.hpp  safe_call.hpp  safe_calls.hpp  sampler.hpp  semaphore.hpp  shader_module.hpp  surface.android.hpp  surface.hpp  surface.metal.hpp  surface.win32.hpp  surface_capabilities.hpp  swapchain.hpp
vulkan-objects/src/: buffer.cpp  command_buffer.cpp  command_buffer_guard.cpp  command_pool.cpp  debug_utils_messenger.cpp  descriptor_pool.cpp  descriptor_set_layout.cpp  device.cpp  device_memory.cpp  fence.cpp  framebuffer.cpp  image.cpp  image_view.cpp  instance.cpp  memory_requirements.cpp  physical_device.cpp  pipeline.cpp  pipeline_layout.cpp  queue.cpp  render_pass.cpp  safe_calls.cpp  safe_calls.hpp  sampler.cpp  semaphore.cpp  shader_module.cpp  surface.android.cpp  surface.cpp  surface.metal.cpp  surface.win32.cpp  surface_capabilities.cpp  surface_format.cpp  swapchain.cpp
vulkan-objects/tst/: test-poc.cpp
vulkan-static/: CMakeLists.txt
vulkan-tools/: CMakeLists.txt
vulkan/inc/m4c0/vulkan/: command_pool.hpp  debug_utils_messenger.hpp  descriptor_pool.hpp  device.hpp  device_memory.hpp  fence.hpp  framebuffer.hpp  handle.hpp  image.hpp  image_view.hpp  instance.hpp  memory_requirements.hpp  physical_device.hpp  queue.hpp  render_pass.hpp  surface.hpp  surface_format.hpp  swapchain.hpp
vulkan/src/: buffer.cpp  command_pool.cpp  debug_utils_messenger.cpp  descriptor_pool.cpp  device.cpp  fence.cpp  framebuffer.cpp  image.cpp  image_view.cpp  instance.cpp  pipeline_layout.cpp  render_pass.cpp  safe_calls.hpp  sampler.cpp  semaphore.cpp  shader_module.cpp  surface.android.cpp  surface.cpp  surface.metal.cpp  surface_format.cpp  swapchain.cpp  volk.hpp  volk_dynamic.cpp
vulkan/tst/: test-poc.cpp
win-main/: CMakeLists.txt
(+178 files in other folders)
